--- a/calculator.css
+++ b/calculator.css
@@ -1,3 +1,52 @@
 @charset "UTF-8";
 /* CSS Document */
 
+/* Calculator Box */
+.box {
+		background-color: #e5e7ea;
+		height: 300px;
+		width: 250px;
+		border-radius: 10px;
+		position: relative;
+		top: 80px;
+		left: 40%;
+}
+
+/* Display */
+.display { 
+background-color: #bfc4ce;
+		width: 220px;
+		position: relative;
+		left: 15px;
+		top: 20px;
+		height: 40px;
+}
+.display input {
+	position: relative;
+	left: 2px;
+	top: 2px;
+	height: 30px;
+	width: 210px;
+	color: black;
+	background-color: #bccd95; 
+	front-size: 21px;
+	text-align: right; 
+}
+
+/ * Calculator Buttons */
+.keys {
+	position: relative;
+	top: 15px;
+}
+.button {
+		width: 400px;
+		height: 30px;
+		border: none;
+		border-radius: 8px;
+		margin-left: 17px;
+		cursor: pointer;
+		border-top: 2px solid transparent;
+}
+.button.function {
+	color: white;
+	background-color: #c64f81;
