--- a/calculator.css
+++ b/calculator.css
@@ -33,7 +33,7 @@ background-color: #bfc4ce;
 	text-align: right; 
 }
 
-/ * Calculator Buttons */
+/* Calculator Buttons */
 .keys {
 	position: relative;
 	top: 15px;
@@ -50,3 +50,25 @@ background-color: #bfc4ce;
 .button.function {
 	color: white;
 	background-color: #c64f81;
+	border-bottom: black 2px solid;
+	border-top: 2px #6f6f6f solid ;
+}
+.button.operator {
+	color: white;
+	background-color: #4d5966; 
+	border-bottom: black 2px solid;
+	border-top: 2px #6f6f6f solid;
+}
+/* Simulate Button Press */
+.function:active {
+	border-top: black 2px solid;
+	border-bottom: 2px #6f6f6f solid;
+}
+.operator:active {
+	border-top: black 2px solid;
+	border-bottom: #303030 2px solid;
+}
+.number:active {
+	border-top: black 2px solid;
+	border-bottom: 2px #6f6f6f solid;
+}
