--- a/calculator.css
+++ b/calculator.css
@@ -39,23 +39,23 @@ background-color: #bfc4ce;
 	top: 15px;
 }
 .button {
-		width: 400px;
+		width: 40px;
 		height: 30px;
 		border: none;
-		border-radius: 8px;
+		border-radius: px;
 		margin-left: 17px;
 		cursor: pointer;
 		border-top: 2px solid transparent;
 }
 .button.function {
-	color: white;
-	background-color: #c64f81;
+	color: red;
+	background-color: #C70700;
 	border-bottom: black 2px solid;
 	border-top: 2px #6f6f6f solid ;
 }
 .button.operator {
-	color: white;
-	background-color: #4d5966; 
+	color: red;
+	background-color: #C70700; 
 	border-bottom: black 2px solid;
 	border-top: 2px #6f6f6f solid;
 }
@@ -70,5 +70,5 @@ background-color: #bfc4ce;
 }
 .number:active {
 	border-top: black 2px solid;
-	border-bottom: 2px #6f6f6f solid;
+	border-bottom: 2px #C70700 solid;
 }
