--- a/calculator.css
+++ b/calculator.css
@@ -3,7 +3,7 @@
 
 /* Calculator Box */
 .box {
-		background-color: #e5e7ea;
+		background-image: url('merry christmas.jpeg');
 		height: 300px;
 		width: 250px;
 		border-radius: 10px;
@@ -28,7 +28,7 @@ background-color: #bfc4ce;
 	height: 30px;
 	width: 210px;
 	color: black;
-	background-color: #bccd95; 
+	background-color: #E5E4E8; 
 	front-size: 21px;
 	text-align: right; 
 }
@@ -48,16 +48,16 @@ background-color: #bfc4ce;
 		border-top: 2px solid transparent;
 }
 .button.function {
-	color: red;
+	color: blue;
 	background-color: #C70700;
-	border-bottom: black 2px solid;
-	border-top: 2px #6f6f6f solid ;
+	border-bottom: none;
+	border-top: none;
 }
 .button.operator {
 	color: red;
-	background-color: #C70700; 
-	border-bottom: black 2px solid;
-	border-top: 2px #6f6f6f solid;
+	background-color: #1460E8; 
+	border-bottom: none;
+	border-top: none;
 }
 /* Simulate Button Press */
 .function:active {
