--- a/calculator.css
+++ b/calculator.css
@@ -42,14 +42,14 @@ background-color: #bfc4ce;
 		width: 40px;
 		height: 30px;
 		border: none;
-		border-radius: px;
+		border-radius: none;
 		margin-left: 17px;
 		cursor: pointer;
 		border-top: 2px solid transparent;
 }
 .button.function {
 	color: blue;
-	background-color: #C70700;
+	background-color: #0A0BFF;
 	border-bottom: none;
 	border-top: none;
 }
