--- a/calculator.css
+++ b/calculator.css
@@ -45,17 +45,8 @@ background-color: #bfc4ce;
 		border-radius: none;
 		margin-left: 17px;
 		cursor: pointer;
-		border-top: 2px solid transparent;
-}
-.button.function {
-	color: blue;
-	background-color: #0A0BFF;
-	border-bottom: none;
-	border-top: none;
-}
-.button.operator {
 	color: red;
-	background-color: #1460E8; 
+	background-color: #0A0BFF;
 	border-bottom: none;
 	border-top: none;
 }
@@ -69,6 +60,6 @@ background-color: #bfc4ce;
 	border-bottom: #303030 2px solid;
 }
 .number:active {
-	border-top: black 2px solid;
-	border-bottom: 2px #C70700 solid;
+	border-top: blue 2px solid;
+	border-bottom: 2px #0A0BFF solid;
 }
